Fixed up styling and made the cards collapsable

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 	margin: 0 auto;
 	padding: 2rem;
 	width: 100% !important;
+	height: 100% !important;
 }
 
 .logo {
